0.4.x: reformat