@@ -6,6 +6,7 @@ import io.dgj7.jod.model.delta.Delta;
 import org.junit.Assert;
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -22,8 +23,8 @@ public class DefaultCollectionDifferencerTest {
     public final void testEmptyLists() {
         final List<Delta> deltas = new LinkedList<>();
 
-        final List<Integer> expected = List.of();
-        final List<Integer> actual = List.of();
+        final List<Integer> expected = Arrays.asList();
+        final List<Integer> actual = Arrays.asList();
 
         objectUnderTest.diffCollections(config, deltas, PATH, expected, actual);
 
@@ -34,8 +35,8 @@ public class DefaultCollectionDifferencerTest {
     public final void testExpectedLargerLeft() {
         final List<Delta> deltas = new LinkedList<>();
 
-        final List<Integer> expected = List.of(0, 1, 2, 3);
-        final List<Integer> actual = List.of(1, 2, 3);
+        final List<Integer> expected = Arrays.asList(0, 1, 2, 3);
+        final List<Integer> actual = Arrays.asList(1, 2, 3);
 
         objectUnderTest.diffCollections(config, deltas, PATH, expected, actual);
 
@@ -51,8 +52,8 @@ public class DefaultCollectionDifferencerTest {
     public final void testExpectedLargerRight() {
         final List<Delta> deltas = new LinkedList<>();
 
-        final List<Integer> expected = List.of(1, 2, 3, 4);
-        final List<Integer> actual = List.of(1, 2, 3);
+        final List<Integer> expected = Arrays.asList(1, 2, 3, 4);
+        final List<Integer> actual = Arrays.asList(1, 2, 3);
 
         objectUnderTest.diffCollections(config, deltas, PATH, expected, actual);
 
@@ -65,8 +66,8 @@ public class DefaultCollectionDifferencerTest {
     public final void testActualLargerLeft() {
         final List<Delta> deltas = new LinkedList<>();
 
-        final List<Integer> expected = List.of(1, 2, 3);
-        final List<Integer> actual = List.of(0, 1, 2, 3);
+        final List<Integer> expected = Arrays.asList(1, 2, 3);
+        final List<Integer> actual = Arrays.asList(0, 1, 2, 3);
 
         objectUnderTest.diffCollections(config, deltas, PATH, expected, actual);
 
@@ -82,8 +83,8 @@ public class DefaultCollectionDifferencerTest {
     public final void testActualLargerRight() {
         final List<Delta> deltas = new LinkedList<>();
 
-        final List<Integer> expected = List.of(1, 2, 3);
-        final List<Integer> actual = List.of(1, 2, 3, 4);
+        final List<Integer> expected = Arrays.asList(1, 2, 3);
+        final List<Integer> actual = Arrays.asList(1, 2, 3, 4);
 
         objectUnderTest.diffCollections(config, deltas, PATH, expected, actual);
 
@@ -96,8 +97,8 @@ public class DefaultCollectionDifferencerTest {
     public final void testSameSizeNotEqual() {
         final List<Delta> deltas = new LinkedList<>();
 
-        final List<Integer> expected = List.of(1, 2, 3);
-        final List<Integer> actual = List.of(1, 2, 4);
+        final List<Integer> expected = Arrays.asList(1, 2, 3);
+        final List<Integer> actual = Arrays.asList(1, 2, 4);
 
         objectUnderTest.diffCollections(config, deltas, PATH, expected, actual);
 
@@ -109,8 +110,8 @@ public class DefaultCollectionDifferencerTest {
     public final void testSameSizeEqual() {
         final List<Delta> deltas = new LinkedList<>();
 
-        final List<Integer> expected = List.of(1, 2, 3);
-        final List<Integer> actual = List.of(1, 2, 3);
+        final List<Integer> expected = Arrays.asList(1, 2, 3);
+        final List<Integer> actual = Arrays.asList(1, 2, 3);
 
         objectUnderTest.diffCollections(config, deltas, PATH, expected, actual);
 
